fix weird spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -215,6 +215,6 @@
   }
 
   .uploadArea {
-    margin-top: 0;
+    margin-top: 20px;
   }
 }
